Fix: snow effect

--- a/src/components/layouts/Layout.astro
+++ b/src/components/layouts/Layout.astro
@@ -35,7 +35,7 @@ const {
 } = Astro.props as Props;
 ---
 
-<html lang='en'>
+<html lang='en' class='snow'>
   <head>
     <script src='https://cdn.jsdelivr.net/npm/theme-change@2.2.0/index.js' defer
     ></script>
@@ -59,7 +59,7 @@ const {
     <script>
       0;
     </script>
-    <span class='snow'></span>
+    <!-- <span class='snow'></span> -->
     <div class='flex-grow w-full max-w-3xl'>
       <Navbar />
       <div class='px-4 pt-4 md:pt-8'>
