--- a/src/pages/[post].astro
+++ b/src/pages/[post].astro
@@ -60,7 +60,7 @@ const {
       <div class='text-center'>
         <h1>{post.title}</h1>
         <div
-          class='flex flex-row items-center justify-center gap-2 text-base sm:text-lg'
+          class='flex flex-row items-center justify-center gap-2 text-sm xs:text-base sm:text-lg'
         >
           <span>
             <Date date={post.date} />
