--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -37,7 +37,7 @@ import Layout from '../components/layouts/Layout.astro';
   </p>
   <p
     style="font-family: 'Segoe Script', cursive;"
-    class='text-2xl xs:text-4xl text-right font-bold select-none px-4 xs:px-8'
+    class='text-2xl xs:text-3xl sm:text-4xl text-right font-bold select-none px-4 xs:px-8'
   >
     Aleksa C.
   </p>
