--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -6,13 +6,13 @@ import { projects } from '../data/project';
 
 <Layout title='Projects' description='A list of projects I have worked on.'>
   <h1>Projects</h1>
-  <div class='flex flex-col gap-4 md:gap-4'>
+  <div class='flex flex-col'>
     <!-- map and add <div class='divider'></div> after each project except the last one  -->
     {
       projects.map(({ name, desc, tech, github, demo, img }, index, array) => (
         <div>
           <div
-            class={`flex flex-col-reverse justify-between items-center gap-8 ${
+            class={`flex flex-col-reverse justify-between items-center md:gap-8 ${
               index % 2 === 0 ? 'md:flex-row-reverse' : 'md:flex-row'
             }`}
           >
@@ -202,7 +202,7 @@ import { projects } from '../data/project';
               </label>
             </label>
           </div>
-          {index !== array.length - 1 && <div class='py-4 divider md:py-8' />}
+          {index !== array.length - 1 && <div class='divider' />}
         </div>
       ))
     }
@@ -214,7 +214,7 @@ import { projects } from '../data/project';
         href='https://github.com/aleksa-codes'
         target='_blank'
         rel='noopener noreferrer'
-        class='flex flex-row items-center justify-center transition-all duration-300 ease-in-out btn hover:scale-105 hover:shadow-md text-slate-300'
+        class='flex flex-row gap-2 items-center justify-center transition-all duration-300 ease-in-out btn hover:scale-105 hover:shadow-md text-slate-300'
       >
         <svg
           xmlns='http://www.w3.org/2000/svg'
@@ -233,7 +233,7 @@ import { projects } from '../data/project';
             d='M9 19c-4.3 1.4 -4.3 -2.5 -6 -3m12 5v-3.5c0 -1 .1 -1.4 -.5 -2c2.8 -.3 5.5 -1.4 5.5 -6a4.6 4.6 0 0 0 -1.3 -3.2a4.2 4.2 0 0 0 -.1 -3.2s-1.1 -.3 -3.5 1.3a12.3 12.3 0 0 0 -6.2 0c-2.4 -1.6 -3.5 -1.3 -3.5 -1.3a4.2 4.2 0 0 0 -.1 3.2a4.6 4.6 0 0 0 -1.3 3.2c0 4.6 2.7 5.7 5.5 6c-.6 .6 -.6 1.2 -.5 2v3.5'
           ></path>
         </svg>
-        <span class='ml-2 uppercase'>View more on GitHub</span>
+        <span class='uppercase'>View more on GitHub</span>
       </a>
     </div>
   </div>
