--- a/src/components/PostCard.astro
+++ b/src/components/PostCard.astro
@@ -6,9 +6,7 @@ import ReadTime from './utilities/ReadTime.astro';
 const post: Post = Astro.props.post;
 ---
 
-<div
-  class='flex flex-col items-center py-0 sm:py-4 sm:flex-row-reverse sm:gap-10'
->
+<div class='flex flex-col items-center sm:pb-4 sm:flex-row-reverse sm:gap-10'>
   {
     post.img && (
       <a href={`/${post.slug}`} class='shrink-0'>
