--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -122,15 +122,19 @@ body {
 
 /* snow */
 .snow {
+  position: absolute;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
+  pointer-events: none;
+  z-index: 999;
   overflow: hidden;
 }
 .snowflake {
   opacity: 0;
   animation: fall 12s ease-out infinite, move 4s ease-in-out infinite,
     fade-in 1s ease-in forwards;
-  pointer-events: none;
 }
 
 @keyframes fall {
