--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -126,10 +126,10 @@ body {
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: 95%;
   pointer-events: none;
   z-index: 999;
-  overflow: hidden;
+  overflow: visible;
 }
 .snowflake {
   opacity: 0;
