--- a/src/pages/[post].astro
+++ b/src/pages/[post].astro
@@ -28,6 +28,10 @@ const {
   canonical={import.meta.env.SITE + post.slug}
   slug={post.slug}
 >
+  <progress
+    class='progress progress-secondary sticky w-full top-16 z-50'
+    max='100'
+    value='0'></progress>
   <div class='flex justify-center'>
     <div class='flex flex-col min-w-full py-4 prose break-words lg:prose-lg'>
       {
@@ -108,3 +112,12 @@ const {
   </div>
 </Layout>
 <script src='../scripts/copytoclipboard.ts'></script>
+<script>
+  const progress = document.querySelector('.progress') as HTMLProgressElement;
+  const totalHeight = document.body.scrollHeight - window.innerHeight;
+  window.onscroll = function () {
+    const progressHeight = (window.pageYOffset / totalHeight) * 100;
+    progress.value = progressHeight;
+    progress.style.display = 'block';
+  };
+</script>
