--- a/src/components/SEO.astro
+++ b/src/components/SEO.astro
@@ -14,7 +14,7 @@ const DOMAIN = 'https://aleksa.codes';
 const DEFAULT_OG_IMAGE = 'https://aleksa.codes/assets/aleksa-codes-og.png';
 const {
   title = 'aleksa.codes',
-  description = 'JavaScript web developer working on user interface design and front-end development. Aleksa is passionate about coding, building things for the web and anything tech related.',
+  description = "As a junior React developer, Aleksa is skilled in building user interfaces and front-end applications using the popular JavaScript library. With a passion for coding and a dedication to creating visually appealing and user-friendly experiences, Aleksa is always looking to improve and expand their skills. Explore Aleksa's portfolio to see their work and learn more about their capabilities as a React developer.",
   siteName = 'aleksa.codes',
   canonical = DOMAIN,
   ogImage = DEFAULT_OG_IMAGE,
