--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -2,7 +2,10 @@
 import Layout from '../components/layouts/Layout.astro';
 ---
 
-<Layout title='About' description='About page'>
+<Layout
+  title='About'
+  description="Learn more about Aleksa, a junior React developer with a strong foundation in building user interfaces and front-end applications. With a passion for coding and a dedication to creating visually appealing and user-friendly experiences, Aleksa is constantly striving to improve and expand their skills. Read more about Aleksa's background and experience on their about page."
+>
   <h1>About me</h1>
   <p>
     Born in 1996, I grew up in the midst of the digital revolution. As a
