--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -3,7 +3,10 @@ import Layout from '../components/layouts/Layout.astro';
 import Avatar from '../components/utilities/Avatar.astro';
 ---
 
-<Layout title='Contact' description='Contact me'>
+<Layout
+  title='Contact'
+  description='Looking to collaborate with or hire a talented junior React developer? Aleksa is skilled in building user interfaces and front-end applications using the popular JavaScript library, and is always looking to improve and expand their skills. Visit the contact page to get in touch and learn more about how Aleksa can bring their expertise to your project.'
+>
   <h1>Contact me</h1>
   <div class='flex flex-col items-center justify-center h-full'>
     <div
