Fix: use absolute paths for scripts and not relative

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -237,4 +237,4 @@ import { navItems } from '../data/nav';
     </div>
   </div>
 </div>
-<script src='../scripts/typewritter.ts'></script>
+<script src='/src/scripts/typewritter.ts'></script>
