--- a/src/components/layouts/Layout.astro
+++ b/src/components/layouts/Layout.astro
@@ -70,8 +70,8 @@ const {
       </div>
     </div>
     <Footer />
-    <script src='../../scripts/snow.ts'></script>
-    <script src='../../scripts/fouc.ts'></script>
+    <script src='/src/scripts/snow.ts'></script>
+    <script src='/src/scripts/fouc.ts'></script>
     <!-- Buy me a coffee -->
     <script
       async
