Fix: revert back to previous broke state and hope astro team fixes it

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -237,4 +237,4 @@ import { navItems } from '../data/nav';
     </div>
   </div>
 </div>
-<script is:inline src='/src/scripts/typewritter.ts' type='module'></script>
+<script src='/src/scripts/typewritter.ts'></script>
