Fix: remove fouc fix cause the loading of styles and scripts changed

--- a/src/components/layouts/Layout.astro
+++ b/src/components/layouts/Layout.astro
@@ -56,7 +56,7 @@ const {
   >
     <div class='snow'></div>
     <!-- some weird fix for mozilla firefox fouc -->
-    <script src='/src/utils/fouc.ts'></script>
+    <!-- <script src='/src/utils/fouc.ts'></script> -->
     <script>
       0;
     </script>
