--- a/src/components/layouts/Layout.astro
+++ b/src/components/layouts/Layout.astro
@@ -52,15 +52,14 @@ const {
   </head>
 
   <body
+    style='visibility: hidden;'
     class='flex flex-col items-center min-h-screen antialiased overflow-x-hidden overflow-y-scroll'
   >
     <div class='snow'></div>
     <!-- some weird fix for mozilla firefox fouc -->
-    <!-- <script src='/src/utils/fouc.ts'></script> -->
     <script>
       0;
     </script>
-    <!-- <span class='snow'></span> -->
     <div class='flex-grow w-full max-w-3xl'>
       <Navbar />
       <div class='px-4 pt-4 md:pt-8'>
@@ -71,6 +70,7 @@ const {
     </div>
     <Footer />
     <script src='/src/utils/snow.ts'></script>
+    <script src='/src/utils/fouc.ts'></script>
     <!-- Buy me a coffee -->
     <script
       async
