Fix: change scripts paths to relative and add is:inner to scripts that are on CDN

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -237,4 +237,4 @@ import { navItems } from '../data/nav';
     </div>
   </div>
 </div>
-<script src='/src/utils/typewriter.ts'></script>
+<script src='../scripts/typewriter.ts'></script>
