--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -4,7 +4,7 @@ import Layout from '../components/layouts/Layout.astro';
 
 <Layout
   title='About'
-  description="Learn more about Aleksa, a junior React developer with a strong foundation in building user interfaces and front-end applications. With a passion for coding and a dedication to creating visually appealing and user-friendly experiences, Aleksa is constantly striving to improve and expand their skills. Read more about Aleksa's background and experience on their about page."
+  description="Learn more about Aleksa, a junior React developer with a strong foundation in building user interfaces and front-end applications. Passionate about coding and dedicated to creating visually appealing and user-friendly experiences, Aleksa (or Alexa) is always looking to improve and expand their skills. Read more about Aleksa's background and experience on their about page."
 >
   <h1>About me</h1>
   <p>
