--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -4,7 +4,7 @@ import { Image } from '@astrojs/image/components';
 import { projects } from '../data/project';
 ---
 
-<Layout title='Projects' description="Explore the diverse range of projects developed by Aleksa, a skilled junior React developer. From visually appealing user interfaces to user-friendly web applications, Aleksa's portfolio showcases their expertise and dedication to creating top-quality work. Visit the projects page to see more of Aleksa's creations and learn about their capabilities as a React developer.">
+<Layout title='Projects' description="Discover the diverse range of projects developed by Aleksa, a skilled junior React developer. From visually appealing user interfaces to user-friendly web applications, Aleksa's (or Alexa's) portfolio showcases their expertise and commitment to creating top-quality work. Explore Aleksa's portfolio to see their creations and learn about their capabilities as a React developer.">
   <h1>Projects</h1>
   <div class='flex flex-col'>
     <!-- map and add <div class='divider'></div> after each project except the last one  -->
