--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -11,7 +11,7 @@ import { navItems } from '../data/nav';
     >
       <!-- for image before the site title, uncomment img below and remove pt-4 from the 1st parent div above
         <img src="https://api.lorem.space/image/face?w=96&h=96" width="48" height="48" alt="Astro Blog" class="rounded-full bg-base-200 md:w-12 md:h-12 w-9 h-9">  -->
-      <span id='typed-logo'>aleksa.codes</span>
+      <span id='typed-logo'></span>
     </a>
   </div>
   <div class='flex-none'>
@@ -237,4 +237,14 @@ import { navItems } from '../data/nav';
     </div>
   </div>
 </div>
-<script src='../scripts/typewriter.ts'></script>
+<!-- <script src='../scripts/typewriter.ts'></script> -->
+<script>
+  import Typewriter from 'typewriter-effect/dist/core';
+  document.addEventListener('DOMContentLoaded', () => {
+    const tw = new Typewriter(document.querySelector('#typed-logo'), {
+      loop: false,
+      autoStart: true
+    });
+    tw.typeString('aleksa.codes').start();
+  });
+</script>
