--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -16,8 +16,10 @@ import { days } from '../data/day';
       class='grid grid-cols-1 px-4 py-8 mx-auto max-w-8xl lg:px-0 lg:grid-cols-3'
     >
       <div class=''></div>
-      <div class='mb-2 text-xs xs:text-sm text-center md:mb-0'>
-        <div class='mb-2 font-medium footer-text-t'>
+      <div
+        class='text-xs xs:text-sm text-center flex flex-col justify-center items-center gap-2'
+      >
+        <div class='font-medium footer-text-t'>
           © 2022 Code by{' '}
           <a
             href='https://github.com/aleksa-codes/astro-portfolio'
@@ -38,6 +40,19 @@ import { days } from '../data/day';
           class='flex justify-center mx-auto text-center md:flex-row footer-text-b'
         >
         </div>
+        <a
+          href='https://astro.build'
+          target='_blank'
+          rel='noopener noreferrer'
+          class='mt-6'
+        >
+          <img
+            src='https://astro.badg.es/v1/built-with-astro.svg'
+            alt='Built with Astro'
+            width='150'
+            height='27.5'
+          />
+        </a>
       </div>
     </div>
   </div>
