Fix: spelling error with twitter meta tag

--- a/src/components/SEO.astro
+++ b/src/components/SEO.astro
@@ -80,7 +80,7 @@ const {
     ? 'Portfolio & Blog'
     : `${title} | ${siteName}`}
 />
-<meta property='twitter:creeator' content={twitterHandle} />
+<meta property='twitter:creator' content={twitterHandle} />
 <meta property='twitter:description' content={description} />
 <meta
   property='twitter:image'
