Fix: add Segoe Script as custom local font

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,5 +1,5 @@
 ---
-import Layout from '../components/layouts/Layout.astro';
+import Layout from '../components/layouts/Layout.astro'
 ---
 
 <Layout
@@ -8,38 +8,29 @@ import Layout from '../components/layouts/Layout.astro';
 >
   <h1>About me</h1>
   <p>
-    Born in 1996, I grew up in the midst of the digital revolution. As a
-    teenager, I developed a passion for building websites and became
-    increasingly interested in the digital economy.
+    Born in 1996, I grew up in the midst of the digital revolution. As a teenager, I developed a passion for building
+    websites and became increasingly interested in the digital economy.
   </p>
   <p>
-    After completing high school, I pursued a Bachelor's degree in <span
-      class='highlight'>Computer Science</span
-    > at Singidunum University and also took a number of online courses to further
-    my knowledge and skills.
+    After completing high school, I pursued a Bachelor's degree in <span class='highlight'>Computer Science</span> at Singidunum
+    University and also took a number of online courses to further my knowledge and skills.
   </p>
   <p>
-    As a passionate and self-motivated <span class='highlight'
-      >full-stack web developer</span
-    >, I am always eager to turn ideas into applications. My ambition is to stay
-    on the cutting edge of the constantly evolving <span class='highlight'
-      >web development</span
-    > world and seek out new learning opportunities and projects to continue improving
-    my skills.
+    As a passionate and self-motivated <span class='highlight'>full-stack web developer</span>, I am always eager to
+    turn ideas into applications. My ambition is to stay on the cutting edge of the constantly evolving <span
+      class='highlight'>web development</span
+    > world and seek out new learning opportunities and projects to continue improving my skills.
   </p>
   <p>
-    In my work, I strive to create <span class='highlight'
-      >modern, responsive websites and applications</span
-    > that meet the needs and desires of my clients, while also finding innovative
-    solutions to problems through collaboration.
+    In my work, I strive to create <span class='highlight'>modern, responsive websites and applications</span> that meet
+    the needs and desires of my clients, while also finding innovative solutions to problems through collaboration.
   </p>
   <p>
-    In my free time, you can find me traveling, dreaming of playing basketball,
-    and playing video games. I also have a soft spot for cats and love to pet
-    them whenever I can. 😸
+    In my free time, you can find me traveling, dreaming of playing basketball, and playing video games. I also have a
+    soft spot for cats and love to pet them whenever I can. 😸
   </p>
   <p
-    style="font-family: 'Segoe Script', cursive;"
+    style="font-family: 'SegoeScript', cursive;"
     class='text-3xl sm:text-4xl text-right font-bold select-none px-4 xs:px-8'
   >
     Aleksa C.
