--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,11 +4,7 @@ import Layout from '../components/layouts/Layout.astro';
 
 <Layout>
   <div class='flex flex-row items-center justify-start mb-4 md:mb-8'>
-    <span
-      id='typed'
-      class='text-4xl font-extrabold lg:text-5xl text-base-content'
-      >Hello World</span
-    >
+    <span id='typed' class='text-4xl font-extrabold lg:text-5xl text-base-content'>Hello World</span>
     <span class='not-prose ml-3 animate-waving-hand'>
       <img
         src='/assets/waving-hand.webp'
@@ -29,17 +25,10 @@ import Layout from '../components/layouts/Layout.astro';
   </h1>
   <h2>
     I design and build{' '}
-    <span
-      class='highlight-heading animate-box-shadow dark:animate-winter-box-shadow'
-      >things for the web.</span
-    >
+    <span class='highlight-heading animate-box-shadow dark:animate-winter-box-shadow'>things for the web.</span>
   </h2>
-  <div class='text-xl font-semibold'>
-    Computer Science Student and Web Developer.
-  </div>
-  <div
-    class='w-[275px] h-[275px] sm:w-[350px] sm:h-[350px] md:w-[450px] md:h-[450px] mx-auto mt-4 bg-laptop'
-  >
+  <div class='text-xl font-semibold'>Computer Science Student and Web Developer.</div>
+  <div class='w-[275px] h-[275px] sm:w-[350px] sm:h-[350px] md:w-[450px] md:h-[450px] mx-auto mt-4 bg-laptop'>
     <!-- Laptop image here -->
   </div>
 </Layout>
