--- a/src/components/layouts/Layout.astro
+++ b/src/components/layouts/Layout.astro
@@ -35,12 +35,9 @@ const {
 } = Astro.props as Props;
 ---
 
-<html lang='en' class=''>
+<html lang='en'>
   <head>
-    <script
-      is:inline
-      src='https://cdn.jsdelivr.net/npm/theme-change@2.2.0/index.js'
-    ></script>
+    <script is:inline src='https://cdn.jsdelivr.net/npm/theme-change@2.2.0/index.js'></script>
     <script>
       if ('serviceWorker' in navigator) {
         window.addEventListener('load', () => {
@@ -48,9 +45,7 @@ const {
         });
       }
     </script>
-    <SEO
-      {...{ title, description, siteName, canonical, ogImage, ogType, twitterHandle, slug }}
-    />
+    <SEO {...{ title, description, siteName, canonical, ogImage, ogType, twitterHandle, slug }} />
   </head>
 
   <body
@@ -58,7 +53,7 @@ const {
     class='flex flex-col items-center min-h-screen antialiased overflow-x-hidden overflow-y-scroll'
   >
     <div class='snow'></div>
-    <!-- some weird fix for mozilla firefox fouc -->
+    <!-- some weird fix for mozilla firefox FOUC -->
     <script>
       0;
     </script>
@@ -71,52 +66,10 @@ const {
       </div>
     </div>
     <Footer />
-    <!-- <script src='../../scripts/fouc.ts'></script> -->
-    <script>
-      // Helper function
-      let domReady = (cb: any) => {
-        document.readyState === 'interactive'
-          ? cb()
-          : window.addEventListener('DOMContentLoaded', cb);
-      };
-      domReady(() => {
-        // Display body when DOM is loaded
-        document.body.style.visibility = 'visible';
-      });
-    </script>
-    <!-- <script src='../../scripts/snow.ts'></script> -->
-    <script>
-      // snowflake characters
-      const snow = ['❄', '❅', '❆'];
-      // snowflake colors
-      const colors = ['#aaa', '#bbb', '#ccc', '#ddd', '#eee'];
-      // number of snowflakes
-      const flakes = 16;
-      // snowflake container
-      const container = document.querySelector('.snow') as HTMLElement;
-      // snowflake container width
-      const containerWidth = container?.clientWidth;
-      // snowflake array
-      const snowflakes: HTMLElement[] = [];
-
-      // create snowflakes
-      for (let i = 0; i < flakes; i++) {
-        // create the snowflake element
-        const flake = document.createElement('div');
-        // set the snowflake character
-        flake.innerHTML = snow[Math.floor(Math.random() * snow.length)];
-        // add the common snowflake styles
-        flake.classList.add('snowflake');
-        // set the unique snowflake styles
-        flake.style.position = 'absolute';
-        flake.style.left = `${Math.random() * containerWidth}px`;
-        flake.style.fontSize = `${Math.floor(Math.random() * 30) + 10}px`;
-        flake.style.color = colors[Math.floor(Math.random() * colors.length)];
-        flake.style.animationDelay = `${Math.random() * 12}s`;
-        container?.appendChild(flake);
-        snowflakes.push(flake);
-      }
-    </script>
+    <!-- FOUC fix -->
+    <script src='../../scripts/fouc.ts'></script>
+    <!-- Snow effect based on if it's winter -->
+    <script src='../../scripts/snow.ts'></script>
     <!-- Buy me a coffee -->
     <script
       is:inline
