--- a/src/components/utilities/WinterAvatar.astro
+++ b/src/components/utilities/WinterAvatar.astro
@@ -115,41 +115,39 @@
                 transform='translate(86.000000, 12.000000) scale(-1, 1) rotate(5.000000) translate(-86.000000, -12.000000) '
               ></path>
             </g>
-          </g><g id='Top' stroke-width='1' fill-rule='evenodd'
+          </g><g id='Top'
             ><defs
-              ><rect id='react-path-2197' x='0' y='0' width='264' height='280'></rect><path
-                d='M167.308863,35.006118 C147.121091,23.3065109 127.128954,25.2219854 112.036894,29.0299707 C96.9448338,32.8379559 88.0168242,43.6513048 80.3566792,59.6480618 C76.5956048,67.5028569 74.3660182,76.7914798 74.0230569,85.4813651 C73.8884429,88.8932666 74.3484305,92.415154 75.267729,95.7003546 C75.6049405,96.9061873 77.4232441,101.086987 77.9224658,97.70885 C78.0885348,96.584253 77.4804043,95.0327505 77.4215529,93.8376154 C77.3444374,92.2693977 77.4273028,90.6807875 77.5341822,89.1149098 C77.7340739,86.1874141 78.2559568,83.3154127 79.1847257,80.524647 C80.5119249,76.5367405 82.2013644,72.212859 84.7874413,68.8480942 C91.1883705,60.5205939 102.268658,60.045883 111.066257,55.4635848 C110.302881,56.8686624 107.359637,59.1432635 108.379389,60.7268592 C109.083576,61.8207003 111.749474,61.4890712 113.022219,61.4539693 C116.370996,61.3623702 119.734993,60.7796791 123.042844,60.306974 C128.255923,59.5618115 133.140585,58.0517626 138.046555,56.2181078 C142.06299,54.7164165 146.650012,53.3257139 149.66868,50.1404701 C154.539813,55.1881187 160.809849,59.9345599 167.070414,63.1428706 C172.68835,66.0222267 181.748751,67.461069 185.182761,73.3006826 C189.2479,80.2147477 187.37751,88.7073939 188.619138,96.2008069 C189.091302,99.05041 190.164155,98.986558 190.751315,96.4378281 C191.748406,92.1082634 192.219217,87.6102098 191.901961,83.1592929 C191.183568,73.1114668 187.496636,46.7057251 167.308863,35.006118 Z'
-                id='react-path-2196'></path><filter
-                x='-0.8%'
-                y='-2.0%'
-                width='101.5%'
-                height='108.0%'
+              ><rect id='react-path-2186' x='0' y='0' width='264' height='280'></rect><path
+                d='M66,0 L66,0 C102.450793,-6.69590214e-15 132,29.5492065 132,66 L132,71 L0,71 L0,66 C-4.46393476e-15,29.5492065 29.5492065,6.69590214e-15 66,0 Z'
+                id='react-path-2184'></path><filter
+                x='-0.7%'
+                y='-1.7%'
+                width='101.4%'
+                height='106.8%'
                 filterUnits='objectBoundingBox'
-                id='react-filter-2193'
+                id='react-filter-2181'
                 ><feOffset dx='0' dy='2' in='SourceAlpha' result='shadowOffsetOuter1'></feOffset><feColorMatrix
-                  values='0 0 0 0 0   0 0 0 0 0   0 0 0 0 0  0 0 0 0.16 0'
+                  values='0 0 0 0 0   0 0 0 0 0   0 0 0 0 0  0 0 0 0.1 0'
                   type='matrix'
-                  in='shadowOffsetOuter1'
-                  result='shadowMatrixOuter1'></feColorMatrix><feMerge
-                  ><feMergeNode in='shadowMatrixOuter1'></feMergeNode><feMergeNode in='SourceGraphic'></feMergeNode>
-                </feMerge>
-              </filter>
-            </defs><mask id='react-mask-2195' fill='white'><use xlink:href='#react-path-2197'></use></mask><g id='Mask'
-            ></g><g id='Top/Short-Hair/Short-Round' mask='url(#react-mask-2195)'
-              ><g transform='translate(-1.000000, 0.000000)'
-                ><mask id='react-mask-2194' fill='white'><use xlink:href='#react-path-2196'></use></mask><use
-                  id='Short-Hair'
-                  stroke='none'
-                  fill='#28354B'
+                  in='shadowOffsetOuter1'></feColorMatrix>
+              </filter><path
+                d='M67.2846026,61.4514246 C83.229708,49.8171415 105.159178,44 133.073012,44 C160.985408,44 182.871592,49.8165424 198.731564,61.4496271 L198.731562,61.4496305 C200.786183,62.956669 202.000006,65.3523289 202.000006,67.900394 L202.000004,98.3697692 C202.000004,100.578907 200.209144,102.369768 198.000006,102.369768 C197.244444,102.369768 196.504332,102.155773 195.865355,101.752558 C179.223261,91.2508526 158.536251,86 133.804323,86 C108.883259,86 87.640395,91.3314713 70.0757313,101.994414 L70.0757317,101.994414 C68.1873241,103.140806 65.7271332,102.539283 64.5807417,100.650875 C64.2008775,100.02514 64.0000054,99.3071624 64.0000054,98.5751499 L64,67.914014 C64,65.358892 65.2205159,62.9574773 67.2846026,61.4514246 Z'
+                id='react-path-2185'></path>
+            </defs><mask id='react-mask-2182' fill='white'><use xlink:href='#react-path-2186'></use></mask><g id='Mask'
+            ></g><g id='Top/Accessories/Winter-Hat-3' transform='translate(-1.000000, 0.000000)'
+              ><g id='hat' stroke-width='1' fill-rule='evenodd' transform='translate(67.000000, 12.000000)'
+                ><circle id='puff' fill='#F4F4F4' cx='66' cy='8' r='20'></circle><mask id='react-mask-2183' fill='white'
+                  ><use xlink:href='#react-path-2184'></use>
+                </mask><use id='hat-mask' fill='#D8D8D8' xlink:href='#react-path-2184'></use><g
+                  id='Color/Palette/Gray-01'
+                  mask='url(#react-mask-2183)'
                   fill-rule='evenodd'
-                  xlink:href='#react-path-2196'></use><g
-                  id='Skin/👶🏽-03-Brown'
-                  mask='url(#react-mask-2194)'
-                  fill='#724133'
-                  ><g transform='translate(0.000000, 0.000000) ' id='Color'
-                    ><rect x='0' y='0' width='264' height='280'></rect>
-                  </g>
+                  fill='#FF5C5C'
+                  ><rect id='🖍Color' x='0' y='0' width='264' height='280'></rect>
                 </g>
+              </g><g id='hat-front'
+                ><use fill='black' fill-opacity='1' filter='url(#react-path-2185)' xlink:href='#react-path-2185'
+                ></use><use fill='#F4F4F4' fill-rule='evenodd' xlink:href='#react-path-2185'></use>
               </g>
             </g>
           </g>
