contact avatar test ios

--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -13,12 +13,8 @@ import Avatar from '../components/utilities/Avatar.astro';
     <div class='mt-[-24px] mb-4 flex flex-col sm:flex-row items-start justify-center sm:items-center gap-4 w-full'>
       <div class='flex flex-row items-center justify-center w-full xs:w-1/2'>
         <!-- Avater based on if it is winter or not -->
-        <!-- <div class='avatar'>
-          <Avatar />
-        </div> -->
-        <div class='winter-avatar'>
-          <WinterAvatar />
-        </div>
+        <Avatar id='avatar' />
+        <WinterAvatar id='winter-avatar' />
       </div>
       <p class='w-full'>
         Feel free to reach out to me at any time, I am always interested in <span class='highlight'>things</span>. Thank
@@ -122,10 +118,10 @@ import Avatar from '../components/utilities/Avatar.astro';
       </div>
     </form>
   </div>
-  <!-- <script>
+  <script>
     // Based on if it is winter or not, show the correct avatar, fix possibly null error
-    const winterAvatar = document.querySelector('.winter-avatar');
-    const avatar = document.querySelector('.avatar');
+    const winterAvatar = document.querySelector('#winter-avatar');
+    const avatar = document.querySelector('#avatar');
     const date = new Date();
     const month = date.getMonth();
     if (month < 2 || month > 10) {
@@ -135,5 +131,5 @@ import Avatar from '../components/utilities/Avatar.astro';
       // remove the winter avatar
       winterAvatar?.remove();
     }
-  </script> -->
+  </script>
 </Layout>
