--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -1,7 +1,7 @@
 ---
 import Layout from '../components/layouts/Layout.astro';
-import WinterAvatar from '../components/utilities/WinterAvatar.astro';
-import Avatar from '../components/utilities/Avatar.astro';
+import WinterAvatar from '/assets/WinterAvatar.svg';
+import Avatar from '/assets/Avatar.svg';
 ---
 
 <Layout
@@ -13,12 +13,8 @@ import Avatar from '../components/utilities/Avatar.astro';
     <div class='mt-[-24px] mb-4 flex flex-col sm:flex-row items-start justify-center sm:items-center gap-4 w-full'>
       <div class='flex flex-row items-center justify-center w-full xs:w-1/2'>
         <!-- Avater based on if it is winter or not -->
-        <div id='avatar'>
-          <Avatar />
-        </div>
-        <div id='winter-avatar'>
-          <WinterAvatar />
-        </div>
+        <img class='avatar m-0' src={Avatar} alt='Avatar' />
+        <img class='winter-avatar m-0' src={WinterAvatar} alt='Winter Avatar' />
       </div>
       <p class='w-full'>
         Feel free to reach out to me at any time, I am always interested in <span class='highlight'>things</span>. Thank
@@ -123,16 +119,15 @@ import Avatar from '../components/utilities/Avatar.astro';
     </form>
   </div>
   <script>
-    // Based on if it is winter or not, show the correct avatar, fix possibly null error
-    const winterAvatar = document.getElementById('winter-avatar');
-    const avatar = document.getElementById('avatar');
+    // Based on if it is winter or not, show the correct avatar
+    const winterAvatar = document.querySelector('.winter-avatar');
+    const avatar = document.querySelector('.avatar');
     const date = new Date();
     const month = date.getMonth();
-    // remove from DOM if not winter
-    if (month < 2 || month > 10) {
-      avatar?.remove();
+    if (month === 11 || month === 0 || month === 1) {
+      avatar?.classList.add('hidden');
     } else {
-      winterAvatar?.remove();
+      winterAvatar?.classList.add('hidden');
     }
   </script>
 </Layout>
