Fix: contact/about page content and dependencies

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,5 +1,5 @@
 ---
-import Layout from '../components/layouts/Layout.astro'
+import Layout from '../components/layouts/Layout.astro';
 ---
 
 <Layout
@@ -8,26 +8,26 @@ import Layout from '../components/layouts/Layout.astro'
 >
   <h1>About me</h1>
   <p>
-    Born in 1996, I grew up in the midst of the digital revolution. As a teenager, I developed a passion for building
-    websites and became increasingly interested in the digital economy.
+    Born in 1996, I was raised during the digital revolution. As a teenager, I developed a passion for building websites
+    and became increasingly fascinated by the digital economy.
   </p>
   <p>
-    After completing high school, I pursued a Bachelor's degree in <span class='highlight'>Computer Science</span> at Singidunum
-    University and also took a number of online courses to further my knowledge and skills.
+    After finishing high school, I pursued a Bachelor's degree in <span class='highlight'>Computer Science</span> at Singidunum
+    University, complementing my studies with a variety of online courses to enhance my knowledge and abilities.
   </p>
   <p>
-    As a passionate and self-motivated <span class='highlight'>full-stack web developer</span>, I am always eager to
-    turn ideas into applications. My ambition is to stay on the cutting edge of the constantly evolving <span
-      class='highlight'>web development</span
-    > world and seek out new learning opportunities and projects to continue improving my skills.
+    As an passionate and motivated <span class='highlight'>full-stack web developer</span>, I'm always eager to
+    transform ideas into applications. My goal is to stay at the forefront of the ever-changing <span class='highlight'
+      >web development</span
+    > world, actively seeking new learning opportunities and projects to continue improving my skills.
   </p>
   <p>
     In my work, I strive to create <span class='highlight'>modern, responsive websites and applications</span> that meet
     the needs and desires of my clients, while also finding innovative solutions to problems through collaboration.
   </p>
   <p>
-    In my free time, you can find me traveling, dreaming of playing basketball, and playing video games. I also have a
-    soft spot for cats and love to pet them whenever I can. 😸
+    During my free time, I enjoy traveling, watching movies or playing basketball and video games. I also have a soft
+    spot for cats and relish the opportunity to pet them whenever possible. 😸
   </p>
   <p
     style="font-family: 'SegoeScript', cursive;"
