--- a/src/pages/[post].astro
+++ b/src/pages/[post].astro
@@ -24,14 +24,11 @@ const {
 <Layout
   title={post.title}
   description={post.desc}
-  ogImage={post.img}
-  canonical={import.meta.env.SITE + post.slug}
+  ogImage={post.ogImage}
+  canonical={import.meta.env.SITE + '/' + post.slug}
   slug={post.slug}
 >
-  <progress
-    class='progress progress-secondary sticky w-full top-16 z-50'
-    max='100'
-    value='0'></progress>
+  <progress class='progress progress-secondary sticky w-full top-16 z-50' max='100' value='0'></progress>
   <div class='flex justify-center'>
     <div class='flex flex-col min-w-full py-4 prose break-words lg:prose-lg'>
       {
@@ -63,9 +60,7 @@ const {
       }
       <div class='text-center'>
         <h1>{post.title}</h1>
-        <div
-          class='flex flex-row items-center justify-center gap-2 text-sm xs:text-base sm:text-lg'
-        >
+        <div class='flex flex-row items-center justify-center gap-2 text-sm xs:text-base sm:text-lg'>
           <span>
             <Date date={post.date} />
           </span>
