--- a/src/components/layouts/Layout.astro
+++ b/src/components/layouts/Layout.astro
@@ -37,7 +37,7 @@ const {
 
 <html lang='en'>
   <head>
-    <script is:inline src='https://cdn.jsdelivr.net/npm/theme-change@2.2.0/index.js'></script>
+    <script is:inline src='https://cdn.jsdelivr.net/npm/theme-change@2.2.0/index.js' defer></script>
     <script>
       if ('serviceWorker' in navigator) {
         window.addEventListener('load', () => {
