Fix: dependencies upgrade and fixed daisyui btn changes

--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -208,13 +208,13 @@ import { projects } from '../data/project';
     }
 
     <div
-      class='flex flex-row items-center justify-center w-full pt-12 md:pt-16'
+      class='flex flex-row items-center justify-center w-full pt-16'
     >
       <a
         href='https://github.com/aleksa-codes'
         target='_blank'
         rel='noopener noreferrer'
-        class='flex flex-row gap-2 items-center justify-center transition-all duration-300 ease-in-out btn hover:scale-105 hover:shadow-md text-slate-300'
+        class='btn btn-neutral flex flex-row gap-2 items-center justify-center transition-all duration-300 hover:scale-105 hover:shadow-md'
       >
         <svg
           xmlns='http://www.w3.org/2000/svg'
