--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -96,7 +96,7 @@ import Layout from '../components/layouts/Layout.astro';
             <path d='M21 3l-6.5 18a0.55 .55 0 0 1 -1 0l-3.5 -7l-7 -3.5a0.55 .55 0 0 1 0 -1l18 -6.5'></path>
           </svg> Send
         </button>
-        <button type='reset' class='gap-1 btn text-slate-300'>
+        <button type='reset' class='gap-1 btn'>
           <svg
             xmlns='http://www.w3.org/2000/svg'
             class='icon icon-tabler icon-tabler-eraser'
